kubernetes/apps/media/jellyfin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: media
spec:
  parentRefs:
    - name: prod
      namespace: gateway
  hostnames:
    - jellyfin.local.elmurphy.com
  rules:
    - backendRefs:
        - name: jellyfin
          port: 8096
